# mirror-game

./: .gitignore  CMakeLists.txt  README.md
res/: test.msave
src/: .main.c.swo  .main.c.swp  .mirror_lib.c.swo  .mirror_lib.h.swo  main.c  mirror_lib.c  mirror_lib.h
